<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_account_number" />

            <TextView
                android:id="@+id/transactions_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/transactions_changename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_rename" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_created" />

            <TextView
                android:id="@+id/transactions_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_modified" />

            <TextView
                android:id="@+id/transactions_modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transactions_accounts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/transactions_loading" />

            <Button
                android:id="@+id/transactions_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions_new" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/transactions_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/transactions_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_delete_account" />

            <Button
                android:id="@+id/transactions_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transactions_refresh" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>